# persona-script-editor

./: .gitignore  FORMAT.md  Makefile  Persona_jap.tbl  README.md  index.html  package-lock.json  package.json  unknown_glyphs.html
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: e0.rs  encoding.rs  iso.rs  lib.rs  main.rs  script.rs
