[package]
name = "persona-script-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "persona_script_editor_lib"
path = "src/lib.rs"

[[bin]]
name = "persona-script-editor"
path = "src/main.rs"
